# C_template

./: CMakeLists.txt  Makefile  util.h
lib/: CMakeLists.txt  Makefile
lib/include/: mailbox.h  util.h  watchdog.h
lib/mailbox/: CMakeLists.txt  Makefile  mailbox.c
lib/watchdog/: CMakeLists.txt  Makefile  watchdog.c
src/: CMakeLists.txt  Makefile  main.c  util.h
src/example/: Makefile  example.c  example.h
src/watchdog/: watchdog.c  watchdog.h
